--- a/Fundacion_DEHVI/app/src/main/AndroidManifest.xml
+++ b/Fundacion_DEHVI/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".CicloDesarrolloIntegral"></activity>
         <activity
             android:name=".ConsultarNinos"
             android:label="@string/title_activity_consultar_ninos"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ProfesorMenuActivity" />
         <activity android:name=".ConsultarNinosActivity" />
         <activity android:name=".MainActivity" />
